fix: Lower map z-index to avoid hiding other elements

--- a/src/styles/_map.scss
+++ b/src/styles/_map.scss
@@ -16,6 +16,7 @@
 #map {
   height: 100%;
   width: 100%;
+  z-index: 0;
 }
 
 .mapboxgl-ctrl-legend-pane--seisms .list--color li::before { border-radius: 50% !important; }
